@@ -1,4 +1,4 @@
-/* $Id: tmux.h,v 1.192 2008-10-09 21:22:16 nicm Exp $ */
+/* $Id: tmux.h,v 1.193 2008-10-09 22:00:33 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -1136,6 +1136,7 @@ void	 input_key(struct window *, int);
 /* colour.c */
 const char *colour_tostring(u_char);
 u_char	 colour_fromstring(const char *);
+u_char	 colour_translate256(u_char);
 
 /* grid.c */
 extern const struct grid_cell grid_default_cell;
